# ChangeLog for dev-ruby/barby
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/barby/ChangeLog,v 1.9 2014/08/05 16:00:46 mrueg Exp $

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> barby-0.5.0-r3.ebuild:
  Remove trailing '.' from DESCRIPTION.

  12 Jun 2014; Manuel Rüger <mrueg@gentoo.org> barby-0.5.0-r3.ebuild:
  Remove ruby18.

  20 Oct 2013; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  Remove descriptions for removed USE flags.

*barby-0.5.0-r3 (20 Oct 2013)

  20 Oct 2013; Hans de Graaff <graaff@gentoo.org> -barby-0.5.0-r2.ebuild,
  +barby-0.5.0-r3.ebuild:
  Drop ruby18-only dependencies and USE flags.

  20 Oct 2013; Hans de Graaff <graaff@gentoo.org> barby-0.5.0-r2.ebuild:
  Remove deprecated ree18.

*barby-0.5.0-r2 (12 May 2012)

  12 May 2012; Diego E. Pettenò <flameeyes@gentoo.org> +barby-0.5.0-r2.ebuild,
  -barby-0.5.0-r1.ebuild, -barby-0.5.0.ebuild:
  Restore prawn on Ruby 1.9 as well, use REQUIRED_USE to make that the correct
  ruby targets are enabled for given USE flags.

  12 May 2012; Diego E. Pettenò <flameeyes@gentoo.org> barby-0.5.0-r1.ebuild:
  Add support for Ruby 1.9; add dependency over imagemagick[png] for testing.

*barby-0.5.0-r1 (16 Jan 2012)

  16 Jan 2012; Diego E. Pettenò <flameeyes@gentoo.org> +barby-0.5.0-r1.ebuild:
  Get the gemspec to report the same dependencies as the ebuild (even though
  upstream doesn't). This simplifies usage of barby with Bundler.

*barby-0.5.0 (18 Sep 2011)

  18 Sep 2011; Diego E. Pettenò <flameeyes@gentoo.org> +barby-0.5.0.ebuild,
  +metadata.xml:
  Initial import of the barby library and tool to generate barcodes in
  different formats with Ruby. Note that outputters and external dependencies
  are all configured by USE flags, and that testing only works if prawn is
  disabled, for now.