@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST barby-0.5.0.tgz 150630 SHA256 ffd40c7fb3e370cae1f91f0b3292dbdf9222ae0a217cd3dde95392b80a461159 SHA512 443db592c4c2df43fc12425e7c6cd1522a4f5449c6d41b20622bb40a47573acb0b5dbc0ea720fc6dc7e5bbd11a12b2c1b95d292e611aed1fa4d62204b4caaee4 WHIRLPOOL 89236530ae590f9a81434d0d3e39cf078cbc86302335403bf1ceace769e1af0daee5bc821576b61e6b840273e04ff834bab6181ccb55182dad0b9ba71940c649
+DIST barby-0.6.2.tgz 92842 SHA256 fd8be7db0d3214fc2e2f330cc62de7c8d1884311b0230501b9cc9a23ec7f5deb SHA512 bb1a0387cfcabe8e282b1624c09574778cf438a5aa9fddaafd413ffe06726e95a766bc3f8bbb51b39894c267b167ce8b3cfe3cbaf83896a90c3509b81478e3a6 WHIRLPOOL 55a9f2171373735fc6fa7bfff60c4faaa0e1a1ab97facfa9a0025a63f9575858177d2df3c5b39dc140a8d163e46c368e1ec2798351fb8208d58fb5c64e4b0c2b
 EBUILD barby-0.5.0-r3.ebuild 3692 SHA256 97d0e6d051f5d0e7ba5edbea092954d936a2b38d763fb5570e0e43e58f7d4a69 SHA512 ed7148edb08404e2ca2a6dcfe22a3eef19f91296669839c0870ad23e5b73336ffe55ae3680efae612f927f50bdc7c7b7b422393781242c1ca1ddd178e0f581b8 WHIRLPOOL 81218fe21629f1bf1725f1f6192399e993559045bad6a915a91fce2a6f9867ad9e7a5bc10c582383122419da73c90ca8260b9fffe4521bd80da0b367ef38dd44
-MISC ChangeLog 1857 SHA256 faf25da555126b09cd4e63886f16684a60f37137cddbb7309f0fa1d3d985c91a SHA512 bd51224334bac36ebc8b7ba2c32000b98efa02a0ee8613aa8225cc91385bf9aeecdf33a454e70c3bf82a59202e9f65ef3d4501c95539fe7dbfb7b14b5110ddf6 WHIRLPOOL 3c0e712e84447713957fe47a81543a87858db0f2d95639f348cad2917049f65702cafb6fdc15815eba598634ff429dea29c9bd1b9afc0efe524e56ba05209497
-MISC metadata.xml 897 SHA256 52078d3016055cc99ebeb319ba91f3754ebbbc65ad1a7e180034b53f39d30676 SHA512 6939529587500392140dc462fbca03b5c9c8540d2f9d5d767228bc7a22509101022950b6ab4eed917708904e75f16a4bb8f1b0c5ccb1079bb9f19d40a653357d WHIRLPOOL ac37110ca16937dd04b3f9a635bb00f3855bcd0a73eaa077102a8ff4739cad991d33e8cfa4da8d5a20cedb729f83abda9248357f56f0fd5018f30455da4c303a
+EBUILD barby-0.6.2.ebuild 3017 SHA256 d4fd94346fa0471308a6210a60bd73cb0462f0e83ee43400cf3515187bce01ca SHA512 c9a6adc97843039b9faf87f604e3ac90a123609894c7334bb9c2e5baf608c0ca1b0346cbccf13dee9a517c1fc20f91ca8b4d24b38e9903e579f9602e95f4b520 WHIRLPOOL 605cd37574b467bd342a23c809f07f63d00680d65131b8b173ca7dacd15249e9615219d5d891b3f54639f8b739663c7811bc915b8457c27017b840f3f76185c0
+MISC ChangeLog 2011 SHA256 ad43b3f5a676d8356bb7d5abd21fd6227f25ac04d2a5c240eea41a07c2af2ece SHA512 bfe12a6e5d3c5a60e2dad8ea02d40f184acf4b89140e2faca35ffcb85c08ff35ca7fdb86518a95c1816504cd9e0714903f6b6ca0e7f2631883880efff299d9de WHIRLPOOL 7d61fb89d544ba4c77c272e7190267b3385ba34867c6cb108d8ede48eec1fd7430584c35d26a021efa1dfcbe001cb8fe223475c8ec74e54dc3bd9b5e03d53802
+MISC metadata.xml 1123 SHA256 4cb3579ff782d4b5fa529efe4e6d30400e71b139f8c9ee35206297e46c1a1606 SHA512 25761bb37d24c9b4feca5d94e0e1fa7b7d9f6cb8cbca392a41028dd4ccd6e4caeb0c513f31e0ff1bd346f67d75215069090d4fc8cf3538a4bfd1a84b9e018a04 WHIRLPOOL 746a008752d94f8982dfca15a746c55977d8f17bf53f87d207f0df5614d762581148891cc809c2836ebe0c204ae6dcfb6489921d5c8d0e89551b938bfe62ab1f
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlSiXCkACgkQiIP6VqMIqNem9QD7BRZE9GO5doBnFDG2pHIsaEDO
+cwzmBYkx6573ax/kJzcA/0blDZnsFKcBYJG4HKkaJae/pb5bWjxCqPaMDUEr/jld
+=FzYg
+-----END PGP SIGNATURE-----
