@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( rmagick? ( dev-ruby/rmagick[ruby_targets_ruby19] ) cairo? ( dev-ruby/rcairo[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( rmagick? ( dev-ruby/rmagick[ruby_targets_ruby20] ) cairo? ( dev-ruby/rcairo[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( rmagick? ( dev-ruby/rmagick[ruby_targets_ruby21] ) cairo? ( dev-ruby/rcairo[ruby_targets_ruby21] ) ) ) test? ( ruby_targets_ruby19? ( qrcode? ( dev-ruby/rqrcode[ruby_targets_ruby19] ) png? ( dev-ruby/chunky_png[ruby_targets_ruby19] ) prawn? ( dev-ruby/prawn[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( qrcode? ( dev-ruby/rqrcode[ruby_targets_ruby20] ) png? ( dev-ruby/chunky_png[ruby_targets_ruby20] ) prawn? ( dev-ruby/prawn[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( qrcode? ( dev-ruby/rqrcode[ruby_targets_ruby21] ) png? ( dev-ruby/chunky_png[ruby_targets_ruby21] ) prawn? ( dev-ruby/prawn[ruby_targets_ruby21] ) ) ) ruby_targets_ruby19? ( test? ( dev-ruby/minitest[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/minitest[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/minitest[ruby_targets_ruby21] ) ) test? ( media-gfx/imagemagick[png] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DESCRIPTION=Ruby barcode generator that doesn't rely on 3rd party libraries
+EAPI=5
+HOMEPAGE=http://toretore.eu/barby/
+IUSE=datamatrix test qrcode rmagick pdf-writer prawn png cairo test test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 doc test test
+KEYWORDS=~amd64
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( rmagick? ( dev-ruby/rmagick[ruby_targets_ruby19] ) cairo? ( dev-ruby/rcairo[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( rmagick? ( dev-ruby/rmagick[ruby_targets_ruby20] ) cairo? ( dev-ruby/rcairo[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( rmagick? ( dev-ruby/rmagick[ruby_targets_ruby21] ) cairo? ( dev-ruby/rcairo[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( qrcode? ( dev-ruby/rqrcode[ruby_targets_ruby19] ) png? ( dev-ruby/chunky_png[ruby_targets_ruby19] ) prawn? ( dev-ruby/prawn[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( qrcode? ( dev-ruby/rqrcode[ruby_targets_ruby20] ) png? ( dev-ruby/chunky_png[ruby_targets_ruby20] ) prawn? ( dev-ruby/prawn[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( qrcode? ( dev-ruby/rqrcode[ruby_targets_ruby21] ) png? ( dev-ruby/chunky_png[ruby_targets_ruby21] ) prawn? ( dev-ruby/prawn[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
+RESTRICT=prawn? ( test )
+SLOT=0
+SRC_URI=https://github.com/toretore/barby/archive/891b15594b34229b8bdb267c10ab5b5309c03320.tar.gz -> barby-0.6.2.tgz
+_eclasses_=eutils	f99a767f569b1f0731b3a1edd17c1d11	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=a11ca67f35db0b3df943d1e57a84e4fa
