@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/barby
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/barby/ChangeLog,v 1.9 2014/08/05 16:00:46 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/barby/ChangeLog,v 1.10 2014/12/30 08:02:48 graaff Exp $
+
+*barby-0.6.2 (30 Dec 2014)
+
+  30 Dec 2014; Hans de Graaff <graaff@gentoo.org> +barby-0.6.2.ebuild,
+  metadata.xml:
+  Version bump. Add ruby20, ruby21.
 
   05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> barby-0.5.0-r3.ebuild:
   Remove trailing '.' from DESCRIPTION.
